// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /drivers smoke tests /drivers 1`] = `
[
  {
    "dateOfBirth": "1932-07-10",
    "driverId": "abate",
    "familyName": "Abate",
    "givenName": "Carlo",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Carlo_Mario_Abate",
  },
  {
    "dateOfBirth": "1913-03-21",
    "driverId": "abecassis",
    "familyName": "Abecassis",
    "givenName": "George",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/George_Abecassis",
  },
  {
    "dateOfBirth": "1957-11-27",
    "driverId": "acheson",
    "familyName": "Acheson",
    "givenName": "Kenny",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/Kenny_Acheson",
  },
  {
    "dateOfBirth": "1969-11-19",
    "driverId": "adams",
    "familyName": "Adams",
    "givenName": "Philippe",
    "nationality": "Belgian",
    "url": "http://en.wikipedia.org/wiki/Philippe_Adams",
  },
  {
    "dateOfBirth": "1913-12-15",
    "driverId": "ader",
    "familyName": "Ader",
    "givenName": "Walt",
    "nationality": "American",
    "url": "http://en.wikipedia.org/wiki/Walt_Ader",
  },
  {
    "dateOfBirth": "1921-11-05",
    "driverId": "adolff",
    "familyName": "Adolff",
    "givenName": "Kurt",
    "nationality": "German",
    "url": "http://en.wikipedia.org/wiki/Kurt_Adolff",
  },
  {
    "dateOfBirth": "1913-08-21",
    "driverId": "agabashian",
    "familyName": "Agabashian",
    "givenName": "Fred",
    "nationality": "American",
    "url": "http://en.wikipedia.org/wiki/Fred_Agabashian",
  },
  {
    "dateOfBirth": "1940-04-19",
    "driverId": "ahrens",
    "familyName": "Ahrens",
    "givenName": "Kurt",
    "nationality": "German",
    "url": "http://en.wikipedia.org/wiki/Kurt_Ahrens,_Jr.",
  },
  {
    "code": "AIT",
    "dateOfBirth": "1995-09-23",
    "driverId": "aitken",
    "familyName": "Aitken",
    "givenName": "Jack",
    "nationality": "British",
    "permanentNumber": "89",
    "url": "http://en.wikipedia.org/wiki/Jack_Aitken",
  },
  {
    "code": "ALB",
    "dateOfBirth": "1979-04-16",
    "driverId": "albers",
    "familyName": "Albers",
    "givenName": "Christijan",
    "nationality": "Dutch",
    "url": "http://en.wikipedia.org/wiki/Christijan_Albers",
  },
  {
    "code": "ALB",
    "dateOfBirth": "1996-03-23",
    "driverId": "albon",
    "familyName": "Albon",
    "givenName": "Alexander",
    "nationality": "Thai",
    "permanentNumber": "23",
    "url": "http://en.wikipedia.org/wiki/Alexander_Albon",
  },
  {
    "dateOfBirth": "1956-12-23",
    "driverId": "alboreto",
    "familyName": "Alboreto",
    "givenName": "Michele",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Michele_Alboreto",
  },
  {
    "dateOfBirth": "1964-06-11",
    "driverId": "alesi",
    "familyName": "Alesi",
    "givenName": "Jean",
    "nationality": "French",
    "url": "http://en.wikipedia.org/wiki/Jean_Alesi",
  },
  {
    "code": "ALG",
    "dateOfBirth": "1990-03-23",
    "driverId": "alguersuari",
    "familyName": "Alguersuari",
    "givenName": "Jaime",
    "nationality": "Spanish",
    "url": "http://en.wikipedia.org/wiki/Jaime_Alguersuari",
  },
  {
    "dateOfBirth": "1954-07-27",
    "driverId": "alliot",
    "familyName": "Alliot",
    "givenName": "Philippe",
    "nationality": "French",
    "url": "http://en.wikipedia.org/wiki/Philippe_Alliot",
  },
  {
    "dateOfBirth": "1932-02-08",
    "driverId": "allison",
    "familyName": "Allison",
    "givenName": "Cliff",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/Cliff_Allison",
  },
  {
    "code": "ALO",
    "dateOfBirth": "1981-07-29",
    "driverId": "alonso",
    "familyName": "Alonso",
    "givenName": "Fernando",
    "nationality": "Spanish",
    "permanentNumber": "14",
    "url": "http://en.wikipedia.org/wiki/Fernando_Alonso",
  },
  {
    "dateOfBirth": "1959-07-20",
    "driverId": "amati",
    "familyName": "Amati",
    "givenName": "Giovanna",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Giovanna_Amati",
  },
  {
    "dateOfBirth": "1924-10-24",
    "driverId": "george_amick",
    "familyName": "Amick",
    "givenName": "George",
    "nationality": "American",
    "url": "http://en.wikipedia.org/wiki/George_Amick",
  },
  {
    "dateOfBirth": "1929-01-19",
    "driverId": "amick",
    "familyName": "Amick",
    "givenName": "Red",
    "nationality": "American",
    "url": "http://en.wikipedia.org/wiki/Red_Amick",
  },
  {
    "dateOfBirth": "1943-07-20",
    "driverId": "amon",
    "familyName": "Amon",
    "givenName": "Chris",
    "nationality": "New Zealander",
    "url": "http://en.wikipedia.org/wiki/Chris_Amon",
  },
  {
    "dateOfBirth": "1931-05-19",
    "driverId": "anderson",
    "familyName": "Anderson",
    "givenName": "Bob",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/Bob_Anderson_(racing_driver)",
  },
  {
    "dateOfBirth": "1939-12-28",
    "driverId": "andersson",
    "familyName": "Andersson",
    "givenName": "Conny",
    "nationality": "Swedish",
    "url": "http://en.wikipedia.org/wiki/Conny_Andersson_(racing_driver)",
  },
  {
    "dateOfBirth": "1940-02-28",
    "driverId": "mario_andretti",
    "familyName": "Andretti",
    "givenName": "Mario",
    "nationality": "American",
    "url": "http://en.wikipedia.org/wiki/Mario_Andretti",
  },
  {
    "dateOfBirth": "1962-10-05",
    "driverId": "andretti",
    "familyName": "Andretti",
    "givenName": "Michael",
    "nationality": "American",
    "url": "http://en.wikipedia.org/wiki/Michael_Andretti",
  },
  {
    "dateOfBirth": "1920-06-15",
    "driverId": "andrews",
    "familyName": "Andrews",
    "givenName": "Keith",
    "nationality": "American",
    "url": "http://en.wikipedia.org/wiki/Keith_Andrews_(driver)",
  },
  {
    "dateOfBirth": "1965-10-07",
    "driverId": "apicella",
    "familyName": "Apicella",
    "givenName": "Marco",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Marco_Apicella",
  },
  {
    "dateOfBirth": "1918-10-12",
    "driverId": "armi",
    "familyName": "Armi",
    "givenName": "Frank",
    "nationality": "American",
    "url": "http://en.wikipedia.org/wiki/Frank_Armi",
  },
  {
    "dateOfBirth": "1926-05-30",
    "driverId": "arnold",
    "familyName": "Arnold",
    "givenName": "Chuck",
    "nationality": "American",
    "url": "http://en.wikipedia.org/wiki/Chuck_Arnold",
  },
  {
    "dateOfBirth": "1948-07-04",
    "driverId": "arnoux",
    "familyName": "Arnoux",
    "givenName": "René",
    "nationality": "French",
    "url": "http://en.wikipedia.org/wiki/Ren%C3%A9_Arnoux",
  },
]
`;

exports[`GET /drivers smoke tests /drivers?circuitId=albert_park&result=2&year=2022 1`] = `
[
  {
    "code": "PER",
    "dateOfBirth": "1990-01-26",
    "driverId": "perez",
    "familyName": "Pérez",
    "givenName": "Sergio",
    "nationality": "Mexican",
    "permanentNumber": "11",
    "url": "http://en.wikipedia.org/wiki/Sergio_P%C3%A9rez",
  },
]
`;

exports[`GET /drivers smoke tests /drivers?circuitId=americas&grid=1&year=2022 1`] = `
[
  {
    "code": "SAI",
    "dateOfBirth": "1994-09-01",
    "driverId": "sainz",
    "familyName": "Sainz",
    "givenName": "Carlos",
    "nationality": "Spanish",
    "permanentNumber": "55",
    "url": "http://en.wikipedia.org/wiki/Carlos_Sainz_Jr.",
  },
]
`;

exports[`GET /drivers smoke tests /drivers?circuitId=bahrain&fastest=1&year=2022 1`] = `
[
  {
    "code": "LEC",
    "dateOfBirth": "1997-10-16",
    "driverId": "leclerc",
    "familyName": "Leclerc",
    "givenName": "Charles",
    "nationality": "Monegasque",
    "permanentNumber": "16",
    "url": "http://en.wikipedia.org/wiki/Charles_Leclerc",
  },
]
`;

exports[`GET /drivers smoke tests /drivers?circuitId=brands_hatch&constructorId=minardi 1`] = `
[
  {
    "dateOfBirth": "1959-05-31",
    "driverId": "cesaris",
    "familyName": "de Cesaris",
    "givenName": "Andrea",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Andrea_de_Cesaris",
  },
  {
    "dateOfBirth": "1961-04-23",
    "driverId": "martini",
    "familyName": "Martini",
    "givenName": "Pierluigi",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Pierluigi_Martini",
  },
  {
    "dateOfBirth": "1959-07-07",
    "driverId": "nannini",
    "familyName": "Nannini",
    "givenName": "Alessandro",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Alessandro_Nannini",
  },
]
`;

exports[`GET /drivers smoke tests /drivers?circuitId=catalunya&year=2022 1`] = `
[
  {
    "code": "ALB",
    "dateOfBirth": "1996-03-23",
    "driverId": "albon",
    "familyName": "Albon",
    "givenName": "Alexander",
    "nationality": "Thai",
    "permanentNumber": "23",
    "url": "http://en.wikipedia.org/wiki/Alexander_Albon",
  },
  {
    "code": "ALO",
    "dateOfBirth": "1981-07-29",
    "driverId": "alonso",
    "familyName": "Alonso",
    "givenName": "Fernando",
    "nationality": "Spanish",
    "permanentNumber": "14",
    "url": "http://en.wikipedia.org/wiki/Fernando_Alonso",
  },
  {
    "code": "BOT",
    "dateOfBirth": "1989-08-28",
    "driverId": "bottas",
    "familyName": "Bottas",
    "givenName": "Valtteri",
    "nationality": "Finnish",
    "permanentNumber": "77",
    "url": "http://en.wikipedia.org/wiki/Valtteri_Bottas",
  },
  {
    "code": "GAS",
    "dateOfBirth": "1996-02-07",
    "driverId": "gasly",
    "familyName": "Gasly",
    "givenName": "Pierre",
    "nationality": "French",
    "permanentNumber": "10",
    "url": "http://en.wikipedia.org/wiki/Pierre_Gasly",
  },
  {
    "code": "HAM",
    "dateOfBirth": "1985-01-07",
    "driverId": "hamilton",
    "familyName": "Hamilton",
    "givenName": "Lewis",
    "nationality": "British",
    "permanentNumber": "44",
    "url": "http://en.wikipedia.org/wiki/Lewis_Hamilton",
  },
  {
    "code": "LAT",
    "dateOfBirth": "1995-06-29",
    "driverId": "latifi",
    "familyName": "Latifi",
    "givenName": "Nicholas",
    "nationality": "Canadian",
    "permanentNumber": "6",
    "url": "http://en.wikipedia.org/wiki/Nicholas_Latifi",
  },
  {
    "code": "LEC",
    "dateOfBirth": "1997-10-16",
    "driverId": "leclerc",
    "familyName": "Leclerc",
    "givenName": "Charles",
    "nationality": "Monegasque",
    "permanentNumber": "16",
    "url": "http://en.wikipedia.org/wiki/Charles_Leclerc",
  },
  {
    "code": "MAG",
    "dateOfBirth": "1992-10-05",
    "driverId": "kevin_magnussen",
    "familyName": "Magnussen",
    "givenName": "Kevin",
    "nationality": "Danish",
    "permanentNumber": "20",
    "url": "http://en.wikipedia.org/wiki/Kevin_Magnussen",
  },
  {
    "code": "NOR",
    "dateOfBirth": "1999-11-13",
    "driverId": "norris",
    "familyName": "Norris",
    "givenName": "Lando",
    "nationality": "British",
    "permanentNumber": "4",
    "url": "http://en.wikipedia.org/wiki/Lando_Norris",
  },
  {
    "code": "OCO",
    "dateOfBirth": "1996-09-17",
    "driverId": "ocon",
    "familyName": "Ocon",
    "givenName": "Esteban",
    "nationality": "French",
    "permanentNumber": "31",
    "url": "http://en.wikipedia.org/wiki/Esteban_Ocon",
  },
  {
    "code": "PER",
    "dateOfBirth": "1990-01-26",
    "driverId": "perez",
    "familyName": "Pérez",
    "givenName": "Sergio",
    "nationality": "Mexican",
    "permanentNumber": "11",
    "url": "http://en.wikipedia.org/wiki/Sergio_P%C3%A9rez",
  },
  {
    "code": "RIC",
    "dateOfBirth": "1989-07-01",
    "driverId": "ricciardo",
    "familyName": "Ricciardo",
    "givenName": "Daniel",
    "nationality": "Australian",
    "permanentNumber": "3",
    "url": "http://en.wikipedia.org/wiki/Daniel_Ricciardo",
  },
  {
    "code": "RUS",
    "dateOfBirth": "1998-02-15",
    "driverId": "russell",
    "familyName": "Russell",
    "givenName": "George",
    "nationality": "British",
    "permanentNumber": "63",
    "url": "http://en.wikipedia.org/wiki/George_Russell_%28racing_driver%29",
  },
  {
    "code": "SAI",
    "dateOfBirth": "1994-09-01",
    "driverId": "sainz",
    "familyName": "Sainz",
    "givenName": "Carlos",
    "nationality": "Spanish",
    "permanentNumber": "55",
    "url": "http://en.wikipedia.org/wiki/Carlos_Sainz_Jr.",
  },
  {
    "code": "MSC",
    "dateOfBirth": "1999-03-22",
    "driverId": "mick_schumacher",
    "familyName": "Schumacher",
    "givenName": "Mick",
    "nationality": "German",
    "permanentNumber": "47",
    "url": "http://en.wikipedia.org/wiki/Mick_Schumacher",
  },
  {
    "code": "STR",
    "dateOfBirth": "1998-10-29",
    "driverId": "stroll",
    "familyName": "Stroll",
    "givenName": "Lance",
    "nationality": "Canadian",
    "permanentNumber": "18",
    "url": "http://en.wikipedia.org/wiki/Lance_Stroll",
  },
  {
    "code": "TSU",
    "dateOfBirth": "2000-05-11",
    "driverId": "tsunoda",
    "familyName": "Tsunoda",
    "givenName": "Yuki",
    "nationality": "Japanese",
    "permanentNumber": "22",
    "url": "http://en.wikipedia.org/wiki/Yuki_Tsunoda",
  },
  {
    "code": "VER",
    "dateOfBirth": "1997-09-30",
    "driverId": "max_verstappen",
    "familyName": "Verstappen",
    "givenName": "Max",
    "nationality": "Dutch",
    "permanentNumber": "33",
    "url": "http://en.wikipedia.org/wiki/Max_Verstappen",
  },
  {
    "code": "VET",
    "dateOfBirth": "1987-07-03",
    "driverId": "vettel",
    "familyName": "Vettel",
    "givenName": "Sebastian",
    "nationality": "German",
    "permanentNumber": "5",
    "url": "http://en.wikipedia.org/wiki/Sebastian_Vettel",
  },
  {
    "code": "ZHO",
    "dateOfBirth": "1999-05-30",
    "driverId": "zhou",
    "familyName": "Zhou",
    "givenName": "Guanyu",
    "nationality": "Chinese",
    "permanentNumber": "24",
    "url": "http://en.wikipedia.org/wiki/Guanyu_Zhou",
  },
]
`;

exports[`GET /drivers smoke tests /drivers?circuitId=hockenheimring&status=4 1`] = `
[
  {
    "dateOfBirth": "1956-12-23",
    "driverId": "alboreto",
    "familyName": "Alboreto",
    "givenName": "Michele",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Michele_Alboreto",
  },
  {
    "dateOfBirth": "1964-06-11",
    "driverId": "alesi",
    "familyName": "Alesi",
    "givenName": "Jean",
    "nationality": "French",
    "url": "http://en.wikipedia.org/wiki/Jean_Alesi",
  },
  {
    "dateOfBirth": "1962-10-05",
    "driverId": "andretti",
    "familyName": "Andretti",
    "givenName": "Michael",
    "nationality": "American",
    "url": "http://en.wikipedia.org/wiki/Michael_Andretti",
  },
  {
    "code": "BAR",
    "dateOfBirth": "1972-05-23",
    "driverId": "barrichello",
    "familyName": "Barrichello",
    "givenName": "Rubens",
    "nationality": "Brazilian",
    "url": "http://en.wikipedia.org/wiki/Rubens_Barrichello",
  },
  {
    "dateOfBirth": "1966-04-08",
    "driverId": "blundell",
    "familyName": "Blundell",
    "givenName": "Mark",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/Mark_Blundell",
  },
  {
    "dateOfBirth": "1957-07-13",
    "driverId": "boutsen",
    "familyName": "Boutsen",
    "givenName": "Thierry",
    "nationality": "Belgian",
    "url": "http://en.wikipedia.org/wiki/Thierry_Boutsen",
  },
  {
    "code": "BUE",
    "dateOfBirth": "1988-10-31",
    "driverId": "buemi",
    "familyName": "Buemi",
    "givenName": "Sébastien",
    "nationality": "Swiss",
    "url": "http://en.wikipedia.org/wiki/S%C3%A9bastien_Buemi",
  },
  {
    "dateOfBirth": "1959-05-31",
    "driverId": "cesaris",
    "familyName": "de Cesaris",
    "givenName": "Andrea",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Andrea_de_Cesaris",
  },
  {
    "code": "DLR",
    "dateOfBirth": "1971-02-24",
    "driverId": "rosa",
    "familyName": "de la Rosa",
    "givenName": "Pedro",
    "nationality": "Spanish",
    "url": "http://en.wikipedia.org/wiki/Pedro_de_la_Rosa",
  },
  {
    "dateOfBirth": "1970-05-22",
    "driverId": "diniz",
    "familyName": "Diniz",
    "givenName": "Pedro",
    "nationality": "Brazilian",
    "url": "http://en.wikipedia.org/wiki/Pedro_Diniz",
  },
  {
    "code": "FIS",
    "dateOfBirth": "1973-01-14",
    "driverId": "fisichella",
    "familyName": "Fisichella",
    "givenName": "Giancarlo",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Giancarlo_Fisichella",
  },
  {
    "dateOfBirth": "1967-05-18",
    "driverId": "frentzen",
    "familyName": "Frentzen",
    "givenName": "Heinz-Harald",
    "nationality": "German",
    "url": "http://en.wikipedia.org/wiki/Heinz-Harald_Frentzen",
  },
  {
    "code": "GAS",
    "dateOfBirth": "1996-02-07",
    "driverId": "gasly",
    "familyName": "Gasly",
    "givenName": "Pierre",
    "nationality": "French",
    "permanentNumber": "10",
    "url": "http://en.wikipedia.org/wiki/Pierre_Gasly",
  },
  {
    "dateOfBirth": "1968-09-28",
    "driverId": "hakkinen",
    "familyName": "Häkkinen",
    "givenName": "Mika",
    "nationality": "Finnish",
    "url": "http://en.wikipedia.org/wiki/Mika_H%C3%A4kkinen",
  },
  {
    "code": "HEI",
    "dateOfBirth": "1977-05-10",
    "driverId": "heidfeld",
    "familyName": "Heidfeld",
    "givenName": "Nick",
    "nationality": "German",
    "url": "http://en.wikipedia.org/wiki/Nick_Heidfeld",
  },
  {
    "dateOfBirth": "1964-06-25",
    "driverId": "herbert",
    "familyName": "Herbert",
    "givenName": "Johnny",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/Johnny_Herbert",
  },
  {
    "dateOfBirth": "1965-11-10",
    "driverId": "irvine",
    "familyName": "Irvine",
    "givenName": "Eddie",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/Eddie_Irvine",
  },
  {
    "code": "KOV",
    "dateOfBirth": "1981-10-19",
    "driverId": "kovalainen",
    "familyName": "Kovalainen",
    "givenName": "Heikki",
    "nationality": "Finnish",
    "url": "http://en.wikipedia.org/wiki/Heikki_Kovalainen",
  },
  {
    "dateOfBirth": "1961-04-23",
    "driverId": "martini",
    "familyName": "Martini",
    "givenName": "Pierluigi",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Pierluigi_Martini",
  },
  {
    "code": "MAS",
    "dateOfBirth": "1981-04-25",
    "driverId": "massa",
    "familyName": "Massa",
    "givenName": "Felipe",
    "nationality": "Brazilian",
    "permanentNumber": "19",
    "url": "http://en.wikipedia.org/wiki/Felipe_Massa",
  },
  {
    "dateOfBirth": "1952-08-17",
    "driverId": "piquet",
    "familyName": "Piquet",
    "givenName": "Nelson",
    "nationality": "Brazilian",
    "url": "http://en.wikipedia.org/wiki/Nelson_Piquet",
  },
  {
    "dateOfBirth": "1962-01-12",
    "driverId": "pirro",
    "familyName": "Pirro",
    "givenName": "Emanuele",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Emanuele_Pirro",
  },
  {
    "dateOfBirth": "1954-11-14",
    "driverId": "salazar",
    "familyName": "Salazar",
    "givenName": "Eliseo",
    "nationality": "Chilean",
    "url": "http://en.wikipedia.org/wiki/Eliseo_Salazar",
  },
  {
    "code": "MSC",
    "dateOfBirth": "1969-01-03",
    "driverId": "michael_schumacher",
    "familyName": "Schumacher",
    "givenName": "Michael",
    "nationality": "German",
    "url": "http://en.wikipedia.org/wiki/Michael_Schumacher",
  },
  {
    "dateOfBirth": "1960-09-08",
    "driverId": "suzuki",
    "familyName": "Suzuki",
    "givenName": "Aguri",
    "nationality": "Japanese",
    "url": "http://en.wikipedia.org/wiki/Aguri_Suzuki",
  },
  {
    "dateOfBirth": "1972-03-04",
    "driverId": "verstappen",
    "familyName": "Verstappen",
    "givenName": "Jos",
    "nationality": "Dutch",
    "url": "http://en.wikipedia.org/wiki/Jos_Verstappen",
  },
  {
    "code": "VIL",
    "dateOfBirth": "1971-04-09",
    "driverId": "villeneuve",
    "familyName": "Villeneuve",
    "givenName": "Jacques",
    "nationality": "Canadian",
    "url": "http://en.wikipedia.org/wiki/Jacques_Villeneuve",
  },
  {
    "dateOfBirth": "1966-10-23",
    "driverId": "zanardi",
    "familyName": "Zanardi",
    "givenName": "Alessandro",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Alex_Zanardi",
  },
  {
    "code": "ZON",
    "dateOfBirth": "1976-03-23",
    "driverId": "zonta",
    "familyName": "Zonta",
    "givenName": "Ricardo",
    "nationality": "Brazilian",
    "url": "http://en.wikipedia.org/wiki/Ricardo_Zonta",
  },
]
`;

exports[`GET /drivers smoke tests /drivers?circuitId=interlagos&constructorId=ferrari&result=1 1`] = `
[
  {
    "dateOfBirth": "1949-02-22",
    "driverId": "lauda",
    "familyName": "Lauda",
    "givenName": "Niki",
    "nationality": "Austrian",
    "url": "http://en.wikipedia.org/wiki/Niki_Lauda",
  },
  {
    "code": "MAS",
    "dateOfBirth": "1981-04-25",
    "driverId": "massa",
    "familyName": "Massa",
    "givenName": "Felipe",
    "nationality": "Brazilian",
    "permanentNumber": "19",
    "url": "http://en.wikipedia.org/wiki/Felipe_Massa",
  },
  {
    "dateOfBirth": "1955-02-24",
    "driverId": "prost",
    "familyName": "Prost",
    "givenName": "Alain",
    "nationality": "French",
    "url": "http://en.wikipedia.org/wiki/Alain_Prost",
  },
  {
    "code": "RAI",
    "dateOfBirth": "1979-10-17",
    "driverId": "raikkonen",
    "familyName": "Räikkönen",
    "givenName": "Kimi",
    "nationality": "Finnish",
    "permanentNumber": "7",
    "url": "http://en.wikipedia.org/wiki/Kimi_R%C3%A4ikk%C3%B6nen",
  },
  {
    "dateOfBirth": "1942-04-12",
    "driverId": "reutemann",
    "familyName": "Reutemann",
    "givenName": "Carlos",
    "nationality": "Argentine",
    "url": "http://en.wikipedia.org/wiki/Carlos_Reutemann",
  },
  {
    "code": "MSC",
    "dateOfBirth": "1969-01-03",
    "driverId": "michael_schumacher",
    "familyName": "Schumacher",
    "givenName": "Michael",
    "nationality": "German",
    "url": "http://en.wikipedia.org/wiki/Michael_Schumacher",
  },
  {
    "code": "VET",
    "dateOfBirth": "1987-07-03",
    "driverId": "vettel",
    "familyName": "Vettel",
    "givenName": "Sebastian",
    "nationality": "German",
    "permanentNumber": "5",
    "url": "http://en.wikipedia.org/wiki/Sebastian_Vettel",
  },
]
`;

exports[`GET /drivers smoke tests /drivers?circuitId=monza 1`] = `
[
  {
    "dateOfBirth": "1932-07-10",
    "driverId": "abate",
    "familyName": "Abate",
    "givenName": "Carlo",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Carlo_Mario_Abate",
  },
  {
    "dateOfBirth": "1957-11-27",
    "driverId": "acheson",
    "familyName": "Acheson",
    "givenName": "Kenny",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/Kenny_Acheson",
  },
  {
    "code": "ALB",
    "dateOfBirth": "1979-04-16",
    "driverId": "albers",
    "familyName": "Albers",
    "givenName": "Christijan",
    "nationality": "Dutch",
    "url": "http://en.wikipedia.org/wiki/Christijan_Albers",
  },
  {
    "code": "ALB",
    "dateOfBirth": "1996-03-23",
    "driverId": "albon",
    "familyName": "Albon",
    "givenName": "Alexander",
    "nationality": "Thai",
    "permanentNumber": "23",
    "url": "http://en.wikipedia.org/wiki/Alexander_Albon",
  },
  {
    "dateOfBirth": "1956-12-23",
    "driverId": "alboreto",
    "familyName": "Alboreto",
    "givenName": "Michele",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Michele_Alboreto",
  },
  {
    "dateOfBirth": "1964-06-11",
    "driverId": "alesi",
    "familyName": "Alesi",
    "givenName": "Jean",
    "nationality": "French",
    "url": "http://en.wikipedia.org/wiki/Jean_Alesi",
  },
  {
    "code": "ALG",
    "dateOfBirth": "1990-03-23",
    "driverId": "alguersuari",
    "familyName": "Alguersuari",
    "givenName": "Jaime",
    "nationality": "Spanish",
    "url": "http://en.wikipedia.org/wiki/Jaime_Alguersuari",
  },
  {
    "dateOfBirth": "1954-07-27",
    "driverId": "alliot",
    "familyName": "Alliot",
    "givenName": "Philippe",
    "nationality": "French",
    "url": "http://en.wikipedia.org/wiki/Philippe_Alliot",
  },
  {
    "dateOfBirth": "1932-02-08",
    "driverId": "allison",
    "familyName": "Allison",
    "givenName": "Cliff",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/Cliff_Allison",
  },
  {
    "code": "ALO",
    "dateOfBirth": "1981-07-29",
    "driverId": "alonso",
    "familyName": "Alonso",
    "givenName": "Fernando",
    "nationality": "Spanish",
    "permanentNumber": "14",
    "url": "http://en.wikipedia.org/wiki/Fernando_Alonso",
  },
  {
    "dateOfBirth": "1943-07-20",
    "driverId": "amon",
    "familyName": "Amon",
    "givenName": "Chris",
    "nationality": "New Zealander",
    "url": "http://en.wikipedia.org/wiki/Chris_Amon",
  },
  {
    "dateOfBirth": "1931-05-19",
    "driverId": "anderson",
    "familyName": "Anderson",
    "givenName": "Bob",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/Bob_Anderson_(racing_driver)",
  },
  {
    "dateOfBirth": "1940-02-28",
    "driverId": "mario_andretti",
    "familyName": "Andretti",
    "givenName": "Mario",
    "nationality": "American",
    "url": "http://en.wikipedia.org/wiki/Mario_Andretti",
  },
  {
    "dateOfBirth": "1962-10-05",
    "driverId": "andretti",
    "familyName": "Andretti",
    "givenName": "Michael",
    "nationality": "American",
    "url": "http://en.wikipedia.org/wiki/Michael_Andretti",
  },
  {
    "dateOfBirth": "1965-10-07",
    "driverId": "apicella",
    "familyName": "Apicella",
    "givenName": "Marco",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Marco_Apicella",
  },
  {
    "dateOfBirth": "1948-07-04",
    "driverId": "arnoux",
    "familyName": "Arnoux",
    "givenName": "René",
    "nationality": "French",
    "url": "http://en.wikipedia.org/wiki/Ren%C3%A9_Arnoux",
  },
  {
    "dateOfBirth": "1933-11-08",
    "driverId": "arundell",
    "familyName": "Arundell",
    "givenName": "Peter",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/Peter_Arundell",
  },
  {
    "dateOfBirth": "1918-07-13",
    "driverId": "ascari",
    "familyName": "Ascari",
    "givenName": "Alberto",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Alberto_Ascari",
  },
  {
    "dateOfBirth": "1947-10-26",
    "driverId": "ashley",
    "familyName": "Ashley",
    "givenName": "Ian",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/Ian_Ashley",
  },
  {
    "dateOfBirth": "1936-07-25",
    "driverId": "ashmore",
    "familyName": "Ashmore",
    "givenName": "Gerry",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/Gerry_Ashmore",
  },
  {
    "dateOfBirth": "1900-03-29",
    "driverId": "aston",
    "familyName": "Aston",
    "givenName": "Bill",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/Bill_Aston",
  },
  {
    "dateOfBirth": "1940-04-04",
    "driverId": "attwood",
    "familyName": "Attwood",
    "givenName": "Richard",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/Richard_Attwood",
  },
  {
    "code": "BAD",
    "dateOfBirth": "1971-01-25",
    "driverId": "badoer",
    "familyName": "Badoer",
    "givenName": "Luca",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Luca_Badoer",
  },
  {
    "dateOfBirth": "1934-12-25",
    "driverId": "baghetti",
    "familyName": "Baghetti",
    "givenName": "Giancarlo",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Giancarlo_Baghetti",
  },
  {
    "dateOfBirth": "1961-10-09",
    "driverId": "bailey",
    "familyName": "Bailey",
    "givenName": "Julian",
    "nationality": "British",
    "url": "http://en.wikipedia.org/wiki/Julian_Bailey",
  },
  {
    "dateOfBirth": "1954-01-31",
    "driverId": "baldi",
    "familyName": "Baldi",
    "givenName": "Mauro",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Mauro_Baldi",
  },
  {
    "dateOfBirth": "1935-12-21",
    "driverId": "bandini",
    "familyName": "Bandini",
    "givenName": "Lorenzo",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Lorenzo_Bandini",
  },
  {
    "dateOfBirth": "1963-04-02",
    "driverId": "barbazza",
    "familyName": "Barbazza",
    "givenName": "Fabrizio",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Fabrizio_Barbazza",
  },
  {
    "dateOfBirth": "1961-04-20",
    "driverId": "barilla",
    "familyName": "Barilla",
    "givenName": "Paolo",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Paolo_Barilla",
  },
  {
    "code": "BAR",
    "dateOfBirth": "1972-05-23",
    "driverId": "barrichello",
    "familyName": "Barrichello",
    "givenName": "Rubens",
    "nationality": "Brazilian",
    "url": "http://en.wikipedia.org/wiki/Rubens_Barrichello",
  },
]
`;

exports[`GET /drivers smoke tests /drivers?driverStandings=1&year=2021 1`] = `
[
  {
    "code": "VER",
    "dateOfBirth": "1997-09-30",
    "driverId": "max_verstappen",
    "familyName": "Verstappen",
    "givenName": "Max",
    "nationality": "Dutch",
    "permanentNumber": "33",
    "url": "http://en.wikipedia.org/wiki/Max_Verstappen",
  },
]
`;

exports[`GET /drivers smoke tests /drivers?year=2010&round=2 1`] = `
[
  {
    "code": "ALG",
    "dateOfBirth": "1990-03-23",
    "driverId": "alguersuari",
    "familyName": "Alguersuari",
    "givenName": "Jaime",
    "nationality": "Spanish",
    "url": "http://en.wikipedia.org/wiki/Jaime_Alguersuari",
  },
  {
    "code": "ALO",
    "dateOfBirth": "1981-07-29",
    "driverId": "alonso",
    "familyName": "Alonso",
    "givenName": "Fernando",
    "nationality": "Spanish",
    "permanentNumber": "14",
    "url": "http://en.wikipedia.org/wiki/Fernando_Alonso",
  },
  {
    "code": "BAR",
    "dateOfBirth": "1972-05-23",
    "driverId": "barrichello",
    "familyName": "Barrichello",
    "givenName": "Rubens",
    "nationality": "Brazilian",
    "url": "http://en.wikipedia.org/wiki/Rubens_Barrichello",
  },
  {
    "code": "BUE",
    "dateOfBirth": "1988-10-31",
    "driverId": "buemi",
    "familyName": "Buemi",
    "givenName": "Sébastien",
    "nationality": "Swiss",
    "url": "http://en.wikipedia.org/wiki/S%C3%A9bastien_Buemi",
  },
  {
    "code": "BUT",
    "dateOfBirth": "1980-01-19",
    "driverId": "button",
    "familyName": "Button",
    "givenName": "Jenson",
    "nationality": "British",
    "permanentNumber": "22",
    "url": "http://en.wikipedia.org/wiki/Jenson_Button",
  },
  {
    "code": "CHA",
    "dateOfBirth": "1984-01-19",
    "driverId": "chandhok",
    "familyName": "Chandhok",
    "givenName": "Karun",
    "nationality": "Indian",
    "url": "http://en.wikipedia.org/wiki/Karun_Chandhok",
  },
  {
    "code": "DLR",
    "dateOfBirth": "1971-02-24",
    "driverId": "rosa",
    "familyName": "de la Rosa",
    "givenName": "Pedro",
    "nationality": "Spanish",
    "url": "http://en.wikipedia.org/wiki/Pedro_de_la_Rosa",
  },
  {
    "code": "DIG",
    "dateOfBirth": "1984-08-11",
    "driverId": "grassi",
    "familyName": "di Grassi",
    "givenName": "Lucas",
    "nationality": "Brazilian",
    "url": "http://en.wikipedia.org/wiki/Lucas_di_Grassi",
  },
  {
    "code": "GLO",
    "dateOfBirth": "1982-03-18",
    "driverId": "glock",
    "familyName": "Glock",
    "givenName": "Timo",
    "nationality": "German",
    "url": "http://en.wikipedia.org/wiki/Timo_Glock",
  },
  {
    "code": "HAM",
    "dateOfBirth": "1985-01-07",
    "driverId": "hamilton",
    "familyName": "Hamilton",
    "givenName": "Lewis",
    "nationality": "British",
    "permanentNumber": "44",
    "url": "http://en.wikipedia.org/wiki/Lewis_Hamilton",
  },
  {
    "code": "HUL",
    "dateOfBirth": "1987-08-19",
    "driverId": "hulkenberg",
    "familyName": "Hülkenberg",
    "givenName": "Nico",
    "nationality": "German",
    "permanentNumber": "27",
    "url": "http://en.wikipedia.org/wiki/Nico_H%C3%BClkenberg",
  },
  {
    "code": "KOB",
    "dateOfBirth": "1986-09-13",
    "driverId": "kobayashi",
    "familyName": "Kobayashi",
    "givenName": "Kamui",
    "nationality": "Japanese",
    "permanentNumber": "10",
    "url": "http://en.wikipedia.org/wiki/Kamui_Kobayashi",
  },
  {
    "code": "KOV",
    "dateOfBirth": "1981-10-19",
    "driverId": "kovalainen",
    "familyName": "Kovalainen",
    "givenName": "Heikki",
    "nationality": "Finnish",
    "url": "http://en.wikipedia.org/wiki/Heikki_Kovalainen",
  },
  {
    "code": "KUB",
    "dateOfBirth": "1984-12-07",
    "driverId": "kubica",
    "familyName": "Kubica",
    "givenName": "Robert",
    "nationality": "Polish",
    "permanentNumber": "88",
    "url": "http://en.wikipedia.org/wiki/Robert_Kubica",
  },
  {
    "code": "LIU",
    "dateOfBirth": "1980-08-06",
    "driverId": "liuzzi",
    "familyName": "Liuzzi",
    "givenName": "Vitantonio",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Vitantonio_Liuzzi",
  },
  {
    "code": "MAS",
    "dateOfBirth": "1981-04-25",
    "driverId": "massa",
    "familyName": "Massa",
    "givenName": "Felipe",
    "nationality": "Brazilian",
    "permanentNumber": "19",
    "url": "http://en.wikipedia.org/wiki/Felipe_Massa",
  },
  {
    "code": "PET",
    "dateOfBirth": "1984-09-08",
    "driverId": "petrov",
    "familyName": "Petrov",
    "givenName": "Vitaly",
    "nationality": "Russian",
    "url": "http://en.wikipedia.org/wiki/Vitaly_Petrov",
  },
  {
    "code": "ROS",
    "dateOfBirth": "1985-06-27",
    "driverId": "rosberg",
    "familyName": "Rosberg",
    "givenName": "Nico",
    "nationality": "German",
    "permanentNumber": "6",
    "url": "http://en.wikipedia.org/wiki/Nico_Rosberg",
  },
  {
    "code": "MSC",
    "dateOfBirth": "1969-01-03",
    "driverId": "michael_schumacher",
    "familyName": "Schumacher",
    "givenName": "Michael",
    "nationality": "German",
    "url": "http://en.wikipedia.org/wiki/Michael_Schumacher",
  },
  {
    "code": "SEN",
    "dateOfBirth": "1983-10-15",
    "driverId": "bruno_senna",
    "familyName": "Senna",
    "givenName": "Bruno",
    "nationality": "Brazilian",
    "url": "http://en.wikipedia.org/wiki/Bruno_Senna",
  },
  {
    "code": "SUT",
    "dateOfBirth": "1983-01-11",
    "driverId": "sutil",
    "familyName": "Sutil",
    "givenName": "Adrian",
    "nationality": "German",
    "permanentNumber": "99",
    "url": "http://en.wikipedia.org/wiki/Adrian_Sutil",
  },
  {
    "code": "TRU",
    "dateOfBirth": "1974-07-13",
    "driverId": "trulli",
    "familyName": "Trulli",
    "givenName": "Jarno",
    "nationality": "Italian",
    "url": "http://en.wikipedia.org/wiki/Jarno_Trulli",
  },
  {
    "code": "VET",
    "dateOfBirth": "1987-07-03",
    "driverId": "vettel",
    "familyName": "Vettel",
    "givenName": "Sebastian",
    "nationality": "German",
    "permanentNumber": "5",
    "url": "http://en.wikipedia.org/wiki/Sebastian_Vettel",
  },
  {
    "code": "WEB",
    "dateOfBirth": "1976-08-27",
    "driverId": "webber",
    "familyName": "Webber",
    "givenName": "Mark",
    "nationality": "Australian",
    "url": "http://en.wikipedia.org/wiki/Mark_Webber_(racing_driver)",
  },
]
`;

exports[`GET /drivers smoke tests /drivers?year=2022 1`] = `
[
  {
    "code": "ALB",
    "dateOfBirth": "1996-03-23",
    "driverId": "albon",
    "familyName": "Albon",
    "givenName": "Alexander",
    "nationality": "Thai",
    "permanentNumber": "23",
    "url": "http://en.wikipedia.org/wiki/Alexander_Albon",
  },
  {
    "code": "ALO",
    "dateOfBirth": "1981-07-29",
    "driverId": "alonso",
    "familyName": "Alonso",
    "givenName": "Fernando",
    "nationality": "Spanish",
    "permanentNumber": "14",
    "url": "http://en.wikipedia.org/wiki/Fernando_Alonso",
  },
  {
    "code": "BOT",
    "dateOfBirth": "1989-08-28",
    "driverId": "bottas",
    "familyName": "Bottas",
    "givenName": "Valtteri",
    "nationality": "Finnish",
    "permanentNumber": "77",
    "url": "http://en.wikipedia.org/wiki/Valtteri_Bottas",
  },
  {
    "code": "DEV",
    "dateOfBirth": "1995-02-06",
    "driverId": "de_vries",
    "familyName": "de Vries",
    "givenName": "Nyck",
    "nationality": "Dutch",
    "permanentNumber": "21",
    "url": "http://en.wikipedia.org/wiki/Nyck_de_Vries",
  },
  {
    "code": "GAS",
    "dateOfBirth": "1996-02-07",
    "driverId": "gasly",
    "familyName": "Gasly",
    "givenName": "Pierre",
    "nationality": "French",
    "permanentNumber": "10",
    "url": "http://en.wikipedia.org/wiki/Pierre_Gasly",
  },
  {
    "code": "HAM",
    "dateOfBirth": "1985-01-07",
    "driverId": "hamilton",
    "familyName": "Hamilton",
    "givenName": "Lewis",
    "nationality": "British",
    "permanentNumber": "44",
    "url": "http://en.wikipedia.org/wiki/Lewis_Hamilton",
  },
  {
    "code": "HUL",
    "dateOfBirth": "1987-08-19",
    "driverId": "hulkenberg",
    "familyName": "Hülkenberg",
    "givenName": "Nico",
    "nationality": "German",
    "permanentNumber": "27",
    "url": "http://en.wikipedia.org/wiki/Nico_H%C3%BClkenberg",
  },
  {
    "code": "LAT",
    "dateOfBirth": "1995-06-29",
    "driverId": "latifi",
    "familyName": "Latifi",
    "givenName": "Nicholas",
    "nationality": "Canadian",
    "permanentNumber": "6",
    "url": "http://en.wikipedia.org/wiki/Nicholas_Latifi",
  },
  {
    "code": "LEC",
    "dateOfBirth": "1997-10-16",
    "driverId": "leclerc",
    "familyName": "Leclerc",
    "givenName": "Charles",
    "nationality": "Monegasque",
    "permanentNumber": "16",
    "url": "http://en.wikipedia.org/wiki/Charles_Leclerc",
  },
  {
    "code": "MAG",
    "dateOfBirth": "1992-10-05",
    "driverId": "kevin_magnussen",
    "familyName": "Magnussen",
    "givenName": "Kevin",
    "nationality": "Danish",
    "permanentNumber": "20",
    "url": "http://en.wikipedia.org/wiki/Kevin_Magnussen",
  },
  {
    "code": "NOR",
    "dateOfBirth": "1999-11-13",
    "driverId": "norris",
    "familyName": "Norris",
    "givenName": "Lando",
    "nationality": "British",
    "permanentNumber": "4",
    "url": "http://en.wikipedia.org/wiki/Lando_Norris",
  },
  {
    "code": "OCO",
    "dateOfBirth": "1996-09-17",
    "driverId": "ocon",
    "familyName": "Ocon",
    "givenName": "Esteban",
    "nationality": "French",
    "permanentNumber": "31",
    "url": "http://en.wikipedia.org/wiki/Esteban_Ocon",
  },
  {
    "code": "PER",
    "dateOfBirth": "1990-01-26",
    "driverId": "perez",
    "familyName": "Pérez",
    "givenName": "Sergio",
    "nationality": "Mexican",
    "permanentNumber": "11",
    "url": "http://en.wikipedia.org/wiki/Sergio_P%C3%A9rez",
  },
  {
    "code": "RIC",
    "dateOfBirth": "1989-07-01",
    "driverId": "ricciardo",
    "familyName": "Ricciardo",
    "givenName": "Daniel",
    "nationality": "Australian",
    "permanentNumber": "3",
    "url": "http://en.wikipedia.org/wiki/Daniel_Ricciardo",
  },
  {
    "code": "RUS",
    "dateOfBirth": "1998-02-15",
    "driverId": "russell",
    "familyName": "Russell",
    "givenName": "George",
    "nationality": "British",
    "permanentNumber": "63",
    "url": "http://en.wikipedia.org/wiki/George_Russell_%28racing_driver%29",
  },
  {
    "code": "SAI",
    "dateOfBirth": "1994-09-01",
    "driverId": "sainz",
    "familyName": "Sainz",
    "givenName": "Carlos",
    "nationality": "Spanish",
    "permanentNumber": "55",
    "url": "http://en.wikipedia.org/wiki/Carlos_Sainz_Jr.",
  },
  {
    "code": "MSC",
    "dateOfBirth": "1999-03-22",
    "driverId": "mick_schumacher",
    "familyName": "Schumacher",
    "givenName": "Mick",
    "nationality": "German",
    "permanentNumber": "47",
    "url": "http://en.wikipedia.org/wiki/Mick_Schumacher",
  },
  {
    "code": "STR",
    "dateOfBirth": "1998-10-29",
    "driverId": "stroll",
    "familyName": "Stroll",
    "givenName": "Lance",
    "nationality": "Canadian",
    "permanentNumber": "18",
    "url": "http://en.wikipedia.org/wiki/Lance_Stroll",
  },
  {
    "code": "TSU",
    "dateOfBirth": "2000-05-11",
    "driverId": "tsunoda",
    "familyName": "Tsunoda",
    "givenName": "Yuki",
    "nationality": "Japanese",
    "permanentNumber": "22",
    "url": "http://en.wikipedia.org/wiki/Yuki_Tsunoda",
  },
  {
    "code": "VER",
    "dateOfBirth": "1997-09-30",
    "driverId": "max_verstappen",
    "familyName": "Verstappen",
    "givenName": "Max",
    "nationality": "Dutch",
    "permanentNumber": "33",
    "url": "http://en.wikipedia.org/wiki/Max_Verstappen",
  },
  {
    "code": "VET",
    "dateOfBirth": "1987-07-03",
    "driverId": "vettel",
    "familyName": "Vettel",
    "givenName": "Sebastian",
    "nationality": "German",
    "permanentNumber": "5",
    "url": "http://en.wikipedia.org/wiki/Sebastian_Vettel",
  },
  {
    "code": "ZHO",
    "dateOfBirth": "1999-05-30",
    "driverId": "zhou",
    "familyName": "Zhou",
    "givenName": "Guanyu",
    "nationality": "Chinese",
    "permanentNumber": "24",
    "url": "http://en.wikipedia.org/wiki/Guanyu_Zhou",
  },
]
`;

exports[`GET /drivers/\${driverId} smoke tests /drivers/bottas 1`] = `
{
  "code": "BOT",
  "dateOfBirth": "1989-08-28",
  "driverId": "bottas",
  "familyName": "Bottas",
  "givenName": "Valtteri",
  "nationality": "Finnish",
  "permanentNumber": "77",
  "url": "http://en.wikipedia.org/wiki/Valtteri_Bottas",
}
`;
